# Val-X

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  overlay.html  package-lock.json  package.json  screenshot.cjs  tailwind.config.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
src/: App.tsx  overlay.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  client_version.rs  encounter.rs  fetcher.rs  http.rs  lib.rs  lockfile.rs  main.rs  match_state.rs  model.rs  orchestrator.rs  presence.rs  static_cache.rs  val_api.rs  websocket.rs
src/components/dashboard/: Dashboard.tsx
src/components/history/: MatchHistory.tsx
src/components/layout/: IntelligenceRail.tsx  KpiGrid.tsx  Masthead.tsx  Sidebar.tsx  Ticker.tsx  TitleBar.tsx
src/components/loadout/: LoadoutView.tsx
src/components/match/: AgentSelect.tsx  LiveMatch.tsx  MatchHeader.tsx  PlayerCard.tsx
src/components/overlay/: OverlayPlayer.tsx  OverlayWindow.tsx
src/components/search/: PlayerSearch.tsx
src/components/shared/: RankBadge.tsx
src/components/stats/: AgentStatsView.tsx  CrosshairView.tsx  LeaderboardView.tsx  MapStatsView.tsx  MatchDetail.tsx  TrendsView.tsx  WeaponStatsView.tsx
src/components/themes/: ThemesView.tsx
src/store/: matchStore.ts  settingsStore.ts  themeStore.ts
